Activated xtext generator by mwe-workflow